--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Happy First Month & Valentine's Day! 💖</h1>
+        <h1>Valentine's Day! 💖</h1>
         <p class="subheading">To my Valentine, the one who makes every day special. ❤️</p>
         
         <div class="letter-box">
